b700: 	fixed some mobile bugs on dash page base: 	fixed dash css bug dash: 	added wrap for better formatting

--- a/static/b700.css
+++ b/static/b700.css
@@ -284,7 +284,8 @@
 
 /* Admin Dashboard */
 .dash-but {
-    margin-bottom: 15px;
+    width: 100%;
+    margin: 15px !important;
 }
 
 /* Pricing */
