--- a/static/base.css
+++ b/static/base.css
@@ -1323,6 +1323,9 @@ input[type=submit] {
 
 .dash {
     position: relative;
+    padding: 30px;
+    padding-bottom: 165px;
+    box-sizing: border-box;
 }
 
 .dash-but {
@@ -1341,9 +1344,23 @@ input[type=submit] {
     box-sizing: border-box;
     text-align: center;
     height: 300px;
-    width: 28%;
+    width: 47%;
+    margin: 15px;
+    -ms-flex-negative: 1;
+    flex-shrink: 1;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 0;
     background-color: rgba(255, 255, 255, .90);
     border: 4px solid rgba(0, 0, 0, .45)
+}
+
+.dash-but:nth-child(odd) {
+    margin-left: 0;
+}
+
+.dash-but:nth-child(even) {
+    margin-right: 0;
 }
 
 .dash-but img {
